[package]
name = "my-secrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
egui = "*"
rfd = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
native-dialog = "*"
encryption = { tag = "0.1.1", git = "https://github.com/ReachPay/encryption.git" }
security-framework = "*"
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
